--- a/app/views/public/job_entries/confirm.html.erb
+++ b/app/views/public/job_entries/confirm.html.erb
@@ -1,6 +1,6 @@
 <div class="form-wrap">
   <div class="form-content">
-    <div class="form-title"><%= image_tag('job_entry/confirm-title.png', width: '350px', height: '28px') %></div>
+    <div class="form-title"><%= image_tag('job_entry/confirm-title.png', width: '350px', height: '28px', class: 'title-img') %></div>
     <ul class="form-attention-text text-center">
       <li>入力内容をご確認ください。</li>
       <li>問題なければ送信ボタンを、誤りがあれば修正ボタンを押してください。</li>
@@ -96,25 +96,35 @@
           </div>
         </div>
       </div>
-    </div>
 
-    <%= form_with model: @job_entry, local: true do |f| %>
-      <%= f.hidden_field :recruit_type %>
-      <%= f.hidden_field :name %>
-      <%= f.hidden_field :name_kana %>
-      <%= f.hidden_field :sex %>
-      <%= f.hidden_field :birth_date %>      
-      <%= f.hidden_field :email %>
-      <%= f.hidden_field :phone_number %>
-      <%= f.hidden_field :prefecture_id %>
-      <%= f.hidden_field :city_name %>
-      <%= f.hidden_field :address %>
-      
-      <ul class="form-btn-box form-flex">
-        <li class="list-inline-item"><%= f.submit "修正する", name: "back", class: 'user-btn form-fix-btn  form-confirm-btn' %></li>
-        <li class="list-inline-item"><%= f.submit "送信する", class: 'user-btn form-btn form-confirm-btn' %></li>
-      </ul>
-    <% end %>
+      <%= form_with model: @job_entry, local: true do |f| %>
+        <%= f.hidden_field :recruit_type %>
+        <%= f.hidden_field :name %>
+        <%= f.hidden_field :name_kana %>
+        <%= f.hidden_field :sex %>
+        <%= f.hidden_field :birth_date %>      
+        <%= f.hidden_field :email %>
+        <%= f.hidden_field :phone_number %>
+        <%= f.hidden_field :prefecture_id %>
+        <%= f.hidden_field :city_name %>
+        <%= f.hidden_field :address %>
+
+        <div class="form-link-box d-flex">
+          <div class="d-block fix-box form-fix-link">
+            <%= f.submit "修正する", name: "back", class: 'user-btn form-fix-btn' %>
+            <div class="icon-container confirm-icon">
+              <i class="fa-solid fa-angle-right"></i>
+            </div>
+          </div>
+          <div class="d-block form-fix-link">
+            <%= f.submit "送信する", class: 'user-btn form-btn' %>
+            <div class="icon-container confirm-icon">
+              <i class="fa-solid fa-angle-right"></i>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
 
