update/公開側の問い合わせフォームのスマホ版デザインを完成

--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -301,7 +301,7 @@ ul {
 @media screen and (max-width: 768px) {
   .icon-container {
     position: absolute;
-    right: 40px;
+    right: 20px;
     color: #FFFFFF;
     font-size: 18px;
   }
@@ -310,9 +310,9 @@ ul {
     right: 20px;
   }
 
-  .form-link:hover .icon-container
+  .form-link:hover .icon-container,
   .form-fix-link:hover .icon-container {
-    right: 35px;
+    right: 15px;
   }
 
   .fix-box {
