--- a/app/views/public/shared/_carrer-contents.html.erb
+++ b/app/views/public/shared/_carrer-contents.html.erb
@@ -1,9 +1,9 @@
 <div class="home-carrer-wrap">
   <div class="home-content-box carrer-content">
     <div class="carrer-img">
-      <%= image_tag('home/carrer.png', width: '181px', height: '34px') %>
+      <%= image_tag('home/carrer.png', width: '181px', height: '34px', class: 'sm-max-img') %>
     </div>
-    <div class="carrer-title"><%= image_tag('home/carrer-title.png', class: 'carrer-title-img') %></div>
+    <div class="carrer-title"><%= image_tag('home/carrer-title.png', class: 'carrer-title-img sm-max-img') %></div>
     <p class="carrer-text">
       年功序列は一切ありません。実力のある人をどんどん登用・抜擢していきます。自分に自信のある方、ここで自分の人生変えたい！と思う方にはうってつけの環境です。飲食未経験でもチャレンジ精神があれば大歓迎！ぜひ一緒に働きましょう！
     </p>
