update/公開側の社長とさしめしページを作成(電話番号はまだ未設定)

--- a/app/views/public/home/show.html.erb
+++ b/app/views/public/home/show.html.erb
@@ -28,7 +28,7 @@
         </div>
         <div class="home-premium-info">
           <p class="home-premium-text">採用情報に興味がある方はぜひホームページ限定特典の「社長とサシメシ（社長のおごりで店舗でご飯を食べながら座談会）」をご覧ください！</p>
-          <div class="home-premium-link">
+          <div class="premium-link">
             <%= link_to '詳しく見る', premium_lbr_index_path, class: 'user-btn home-premium-btn' %>
           </div>
         </div>
