--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -62,6 +62,11 @@ ul {
   background-color: transparent;
 }
 
+.user-btn {
+  border-radius: 4px;
+  border: none;
+}
+
 @media screen and (max-width: 767px) {
   .d-flex {
     display: block !important;
@@ -81,11 +86,10 @@ ul {
   .display {
     display: none;
   }
-}
 
-.user-btn {
-  border-radius: 4px;
-  border: none;
+  .user-btn {
+    font-size: 14px !important;
+  }
 }
 
 .btn-toggle {
@@ -1104,6 +1108,18 @@ ul {
   top: 30%;
 }
 
+.premium-btn::before {
+  content: "\f095";
+  font-family: "Font Awesome 5 Free";
+  position: absolute;
+  left: 20px;
+  top: 30%;
+}
+
+.premium-btn:hover::before {
+  left: 15px; 
+}
+
 .home-about-us-wrap .user-btn:hover::after,
 .home-restaurant-wrap .user-btn:hover::after,
 .home-carrer-wrap .user-btn:hover::after,
@@ -1246,7 +1262,7 @@ ul {
   padding-bottom: 25px;
 }
 
-.home-premium-link {
+.premium-link {
   display: flex;
   justify-content: center;
 }
@@ -1322,6 +1338,7 @@ ul {
 .news-index-btn,
 .job-entry-btn,
 .lbr-dream-btn,
+.premium-btn,
 .form-btn {
   width: 280px;
   height: 60px;
@@ -2299,6 +2316,65 @@ input[name="tab_item"] {
   .staff-interview-content-title {
     font-size: 20px;
     margin-bottom: 10px;
+  }
+}
+
+.premium-wrap {
+  width: 100%;
+  background-color: #FFF7E3;
+  padding: 60px 0;
+}
+
+.premium-content {
+  max-width: 800px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.premium-title {
+  text-align: center;
+}
+
+.premium-title-img {
+  width: 285px;
+  height: 40px;
+}
+
+.premium-text-box {
+  background-color: #FFFFFF;
+  margin: 40px 0;
+  padding: 25px 0;
+  color: #000000;
+}
+
+.fa-angles-down {
+  font-size: 45px;
+  color: #D32600;
+}
+
+@media screen and (max-width: 767px) {
+  .premium-wrap {
+    padding: 40px 0 60px;
+  }
+
+  .premium-content {
+    max-width: none;
+    margin: 0 20px;
+  }
+
+  .premium-title-img {
+    width: 200px;
+    height: 28px;
+  }
+
+  .premium-text-box {
+    margin: 25px 0;
+    padding: 20px 5px;
+    font-size: 14px;
+  }
+
+  .fa-angles-down {
+    font-size: 30px;
   }
 }
 
