--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -1107,6 +1107,7 @@ ul {
 .home-restaurant-wrap .user-btn::after,
 .home-carrer-wrap .user-btn::after,
 .home-news-wrap .news-index-btn::after,
+.system-premium-btn::after,
 .job-entry-btn::after,
 .lbr-dream-btn::after {
   content: "\f105";
@@ -1132,6 +1133,7 @@ ul {
 .home-restaurant-wrap .user-btn:hover::after,
 .home-carrer-wrap .user-btn:hover::after,
 .home-news-wrap .news-index-btn:hover::after,
+.system-premium-btn:hover::after,
 .job-entry-btn:hover::after,
 .lbr-dream-btn:hover::after {
   right: 15px; 
@@ -1347,6 +1349,7 @@ ul {
 .job-entry-btn,
 .lbr-dream-btn,
 .premium-btn,
+.system-premium-btn,
 .form-btn {
   width: 280px;
   height: 60px;
@@ -3124,18 +3127,22 @@ input[name="tab_item"] {
   color: #2C2C2C;
 }
 
+.job-system-card-subtitle:nth-of-type(2) {
+  margin-top: 30px;
+}
+
 .job-system-card-title {
   text-align: center;
   margin-bottom: 30px;
 }
 
 .system-card-title1-img {
-  width: 180px;
+  width: auto;
   height: 35px;
 }
 
 .system-card-title2-img {
-  width: 210px;
+  width: auto;
   height: 35px;
 }
 
@@ -3155,6 +3162,36 @@ input[name="tab_item"] {
   font-size: 12px;
 }
 
+.job-carrer-step-wrap {
+  width: 100%;
+  background-color: #F6F8FC;
+  padding: 80px 0 ;
+}
+
+.job-carrer-step-content {
+  max-width: 1080px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.job-carrer-step-title {
+  padding-bottom: 30px;
+}
+
+.job-carrer-step-title-img {
+  width: auto;
+  height: 40px;
+}
+
+.job-carrer-step-text {
+  color: #2C2C2C;
+  padding-bottom: 30px;
+}
+
+.job-carrer-step-img {
+  width: 100%;
+  height: auto;
+}
 
 .job-entry-wrap {
   width: 100%;
@@ -3232,6 +3269,7 @@ input[name="tab_item"] {
 
   .job-profile-content,
   .job-system-content,
+  .job-carrer-step-content,
   .job-entry-content {
     max-width: none;
     margin: 0 20px;
@@ -3249,7 +3287,7 @@ input[name="tab_item"] {
   }
 
   .system-title-img {
-    width: 220px;
+    width: auto;
     height: 28px;
   }
 
@@ -3262,17 +3300,21 @@ input[name="tab_item"] {
   }
 
   .job-system-card-title {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
   }
 
   .system-card-title1-img {
-    width: 120px;
+    width: auto;
     height: 22px;
   }
   
   .system-card-title2-img {
-    width: 140px;
+    width: auto;
     height: 22px
+  }
+
+  .job-system-card-subtitle:nth-of-type(2) {
+    margin-top: 20px;
   }
 
   .job-system-card-text {
@@ -3282,6 +3324,29 @@ input[name="tab_item"] {
 
   .job-system-card-text-margin {
     margin-bottom: 15px;
+  }
+
+  .job-carrer-step-wrap {
+    width: 100%;
+    background-color: #F6F8FC;
+    padding: 40px 0 ;
+  }
+  
+  .job-carrer-step-title {
+    padding-bottom: 20px;
+  }
+  
+  .job-carrer-step-title-img {
+    height: 28px;
+  }
+  
+  .job-carrer-step-text {
+    padding-bottom: 20px;
+  }
+  
+  .job-carrer-step-img {
+    width: 100%;
+    height: auto;
   }
 
   .enrtry-title-img {
