--- a/app/views/public/job_entries/show.html.erb
+++ b/app/views/public/job_entries/show.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: 'public/shared/section-title', locals: { section_title: '採用情報' } %>
 <div class="job-profile-wrap">
   <div class="job-profile-content">
-    <div class="job-profile-title"><%= image_tag('job_entry/profile-title.png', class: 'profile-title-img') %></div>
+    <div class="job-profile-title"><%= image_tag('job_entry/profile-title.png', class: 'profile-title-img sm-max-img') %></div>
     <div class="job-profile-text">
       <p>１つでも当てはまっていたら<br class="sm-display">迷わずご応募ください！</p>
       <p>もしくは<span class="alert-text">見た人特典</span>から、<br class="sm-display">社長と食事しながらざっくばらんに話しましょう！</p>
@@ -21,18 +21,21 @@
 </div>
 <div class="job-system-wrap">
   <div class="job-system-content">
-    <div class="job-system-title"><%= image_tag('job_entry/system-title.png', class: 'system-title-img') %></div>
+    <div class="job-system-title"><%= image_tag('job_entry/system-title.png', class: 'system-title-img sm-max-img') %></div>
     <div class="job-system-text">
       <p>他の企業にはない<br class="sm-display">LBR独自の制度があります!</p>
     </div>
     <div class="job-system-card">
       <p class="job-system-card-subtitle">制度1</p>
-      <div class="job-system-card-title"><%= image_tag('job_entry/system-card-title1.png', class: 'system-card-title1-img') %></div>
+      <div class="job-system-card-title"><%= image_tag('job_entry/system-card-title1.png', class: 'system-card-title1-img sm-max-img') %></div>
       <div class="job-system-card-text job-system-card-text-margin">
         <p>社長とサシ飯。実際に働くとどうなるのか？どんなキャリアがあるのか？社長ってどんな人なのか？どんな会社なのか？社長のおごりで運営店舗で食事(酒あり)しながらの座談会です！</p>
       </div>
+      <div class="premium-link">
+        <%= link_to '詳しく見る', premium_lbr_index_path, class: 'user-btn system-premium-btn' %>
+      </div>
       <p class="job-system-card-subtitle">制度2</p>
-      <div class="job-system-card-title"><%= image_tag('job_entry/system-card-title2.png', class: 'system-card-title2-img') %></div>
+      <div class="job-system-card-title"><%= image_tag('job_entry/system-card-title2.png', class: 'system-card-title2-img sm-max-img') %></div>
       <div class="job-system-card-text">
         <p>内定後、圧倒的なポテンシャルを見せていただいた方にのみ付与。<br class="display">当社規定のタイミングでいつでも入社することができます!</p>
         <p class="job-system-card-sub-text">※例)弊社内定後、3年以内であれば別の会社に就職していても、弊社へ再度エントリーなしで転職可能!</p>
@@ -40,9 +43,18 @@
     </div>
   </div>
 </div>
+<div class="job-carrer-step-wrap">
+  <div class="job-carrer-step-content">
+    <div class="job-carrer-step-title"><%= image_tag('job_entry/carrer-step-title.png', class: 'job-carrer-step-title-img sm-max-img') %></div>
+    <div class="job-carrer-step-text">
+      <p>LBレストランでは社員に合わせたキャリアステップを用意しています</p>
+    </div>
+    <div><%= image_tag('job_entry/carrer-step.png', class: 'job-carrer-step-img') %></div>
+  </div>
+</div>
 <div class="job-entry-wrap">
   <div class="job-entry-content">
-    <div class="job-entry-title"><%= image_tag('job_entry/entry-title.png', class: 'enrtry-title-img') %></div>
+    <div class="job-entry-title"><%= image_tag('job_entry/entry-title.png', class: 'enrtry-title-img sm-max-img') %></div>
     <div class="job-entry-card">
       <div class="job-entry-card-text-box">
         <div class="job-entry-card-text-icon-sm">
