update/公開側のフォームのタイトル画像のデザインの修正

--- a/app/views/public/job_entries/confirm.html.erb
+++ b/app/views/public/job_entries/confirm.html.erb
@@ -1,6 +1,6 @@
 <div class="form-wrap">
   <div class="form-content">
-    <div class="form-title"><%= image_tag('job_entry/confirm-title.png', width: '350px', height: '28px', class: 'title-img') %></div>
+    <div class="form-title"><%= image_tag('job_entry/confirm-title.png', class: 'form-title-img sm-max-img') %></div>
     <ul class="form-attention-text text-center">
       <li>入力内容をご確認ください。</li>
       <li>問題なければ送信ボタンを、誤りがあれば修正ボタンを押してください。</li>
