--- a/app/views/public/job_entries/new.html.erb
+++ b/app/views/public/job_entries/new.html.erb
@@ -1,6 +1,6 @@
 <div class="form-wrap">
   <div class="form-content">
-    <div class="form-title"><%= image_tag('job_entry/title.png', width: '270px', height: '28px', class: 'title-img') %></div>
+    <div class="form-title"><%= image_tag('job_entry/title.png', class: 'form-title-img sm-max-img') %></div>
     <ul class="form-attention-text text-center">
       <li>【業界・職種未経験／第二新卒／フリーターさんも歓迎！】</li>
       <li>学歴不問＆前職の雇用形態なども一切問いません。</li>
