--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -226,6 +226,11 @@ ul {
   text-align: center;
 }
 
+.form-title-img {
+  margin: auto;
+  height: 28px;
+}
+
 .form-title2 {
   margin-bottom: 15px;
   margin-top: 50px;
@@ -249,6 +254,11 @@ ul {
 @media (max-width: 767px){
   .form-subtitle {
     margin-bottom: 1.5rem;
+  }
+
+  .form-title-img {
+    margin: auto;
+    height: 24px;
   }
 }
 
