--- a/app/views/public/contacts/new.html.erb
+++ b/app/views/public/contacts/new.html.erb
@@ -1,6 +1,6 @@
 <div class="form-wrap">
   <div class="form-content">
-    <div class="form-title"><%= image_tag('contact/title.png', width: '213px', height: '31px', class: 'title-img') %></div>
+    <div class="form-title"><%= image_tag('contact/title.png', class: 'form-title-img sm-max-img') %></div>
     <ul class="form-attention-text">
       <li class="alert-text">※ お忘れ物など、お急ぎの場合は直接店舗までご連絡ください。</li>
       <li>※ ご入力いただいた情報は当社グループ及び店舗と皆さまのコミュニケーションを目的として利用し、その他の目的で外部に流出するようなことは一切ございません。</li>
